# ESP32-S3-N16R8

./: CMakeLists.txt  README.md  partitions_webserver.csv  参考.json
.devcontainer/: devcontainer.json
components/My_WS2812/: CMakeLists.txt  My_WS2812.c  My_WS2812.h
components/Onenet/: ontnet_mqtt.h
components/WIFI_Manager/: CMakeLists.txt  WIFI_Manager.c  WIFI_Manager.h
components/ap_wifi/: CMakeLists.txt  ap_wifi.c  ap_wifi.h
components/button/: CMakeLists.txt  button.c  button.h
components/ws_server/: CMakeLists.txt  ws_server.c  ws_server.h
main/: CMakeLists.txt  idf_component.yml  main.c
